--- a/views/templates/blog-post.html
+++ b/views/templates/blog-post.html
@@ -1,6 +1,7 @@
 {% extends 'views/layouts/base.html' %}
 
 {% block content %}
+{# Get blog collection #}
 {% set blogCollectionCacheID = strings('blog-collection-' ~ 'blog' ~ entry.id).hash().toString() %}
 {% if cache().has(blogCollectionCacheID) %}
     {% set blog = cache().get(blogCollectionCacheID) %}
@@ -8,6 +9,7 @@
     {% set blog = entries().fetch('blog', {'collection': true}).onlyFromCollection(['published_at', 'slug']).sortByDesc('published_at') %}
     {% do cache().set(blogCollectionCacheID, blog) %}
 {% endif %}
+
 {% set postDate = entry.published_at|date(flextype.registry.get('flextype.date_display_format')) %}
 {% set olderPost = collection(blog).whereOlder('published_at', postDate).first()['slug'] %}
 {% set newerPost = collection(blog).whereNewer('published_at', postDate).last()['slug'] %}
