--- a/views/templates/default.html
+++ b/views/templates/default.html
@@ -1,5 +1,7 @@
 {% extends 'views/layouts/base.html' %}
 
 {% block content %}
+<div class="lg:px-32">
     {{ entry.content|markdown|raw }}
+</div>
 {% endblock %}
