--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -12,7 +12,7 @@
 
     {# Display blog posts #}
     {% for post in blog %}
-        <a href="{{ post.id }}" class="text-4xl border-b-black border-b-2 flex items-center py-4 hover:text-pink-500">
+        <a href="{{ getBaseUrl() }}/{{ post.id }}" class="text-4xl border-b-black border-b-2 flex items-center py-4 hover:text-pink-500">
             <div>{{ post.title }}</div>
             <div class="ml-auto text-base">{{ post.published_at|date(flextype.registry.get('flextype.date_display_format')) }}</div>
         </a>
