--- a/views/templates/blog-post.html
+++ b/views/templates/blog-post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {# Get blog collection #}
-{% set blogCollectionCacheID = strings('blog-collection-' ~ 'blog' ~ entry.id).hash().toString() %}
+{% set blogCollectionCacheID = strings('blog-collection-' ~ 'blog' ~ id).hash().toString() %}
 {% if cache().has(blogCollectionCacheID) %}
     {% set blog = cache().get(blogCollectionCacheID) %}
 {% else %}
@@ -10,13 +10,13 @@
     {% do cache().set(blogCollectionCacheID, blog) %}
 {% endif %}
 
-{% set postDate = entry.published_at|date(flextype.registry.get('flextype.date_display_format')) %}
+{% set postDate = published_at|date(flextype.registry.get('flextype.date_display_format')) %}
 {% set olderPost = collection(blog).whereOlder('published_at', postDate).first()['slug'] %}
 {% set newerPost = collection(blog).whereNewer('published_at', postDate).last()['slug'] %}
 <div class="lg:px-32">
-    <h2 class="text-5xl text-center mb-2 font-bold">{{ entry.title }}</h2>
+    <h2 class="text-5xl text-center mb-2 font-bold">{{ title }}</h2>
     <div class="'text-normal text-center mb-14">{{ postDate }}</div>
-    {{ entry.content|markdown|raw }}
+    {{ content|markdown|raw }}
     <div class="border-t-black border-t-2 py-8 mt-10 flex text-center">
         <div class="w-4/12">
             {% if (olderPost) %}<a href="{{ getBaseUrl() }}/blog/{{ olderPost }}" class="px-16 hover:text-pink-500">&larr; Older</a>{% endif %}
