--- a/views/templates/default.html
+++ b/views/templates/default.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="lg:px-32">
-    {{ entry.content|markdown|raw }}
+    {{ content|markdown|raw }}
 </div>
 {% endblock %}
