feat(templates): update templates

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -17,13 +17,13 @@
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;400;600;800&display=swap" rel="stylesheet">
-        
-            {% do registry().set('assets.site.css.styles', const('FLEXTYPE_PROJECT_NAME') ~ '/assets/dist/css/styles.css') %}
+            <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;800&display=swap" rel="stylesheet">
+    
+            {% do registry().set('assets.site.css.styles', url('/assets/dist/css/styles.css', 'project')) %}
 
             {% if registry().has('assets.site.css') %}
                 {% for css in registry().get('assets.site.css') %}
-                    <link href="{{ getBaseUrl() }}/{{ css }}" rel="stylesheet">
+                    <link href="{{ css }}" rel="stylesheet">
                 {% endfor %}
             {% endif %}
 
@@ -33,13 +33,13 @@
     <body>
         <nav class="container flex mx-auto w-[1200px] py-10 font-medium">
             <div class="flex">
-                <a href="{{ getBaseUrl() }}" class="font-semibold">{{ registry().get('plugins.site.settings.title')|e('html') }}</a>
+                <a href="{{ url() }}" class="font-semibold hover:text-pink-500">{{ registry().get('plugins.site.settings.title')|e('html') }}</a>
             </div>
             <ul class="flex ml-auto">
                 {% for item in entries().fetch('', {'collection': true}).sortByAsc('menu.order') %}
                     {% if item.menu.title %}
                         <li class="{% if item.menu.url in id %}active{% endif %}">
-                            <a class="{{ loop.last ? '' : 'px-6' }}" href="{{ getBaseUrl() }}/{{ item.menu.url }}">{{ item.menu.title }}</a>
+                            <a class="{{ loop.last ? '' : 'px-6' }} hover:text-pink-500" href="{{ url(item.menu.url) }}">{{ item.menu.title }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
@@ -65,7 +65,7 @@
         {% if registry().has('assets.site.js') %}
             {% for js in registry().get('assets.site.js') %}
                 {% if js %}
-                    <script type="text/javascript" src="{{ getBaseUrl() }}/{{ js }}"></script>
+                    <script type="text/javascript" src="{{ js }}"></script>
                 {% endif %}
             {% endfor %}
         {% endif %}
