--- a/views/partials/head/keywords.html
+++ b/views/partials/head/keywords.html
@@ -1,3 +1,4 @@
+{% apply spaceless %}
 {% if seo.keywords %}
     {{ seo.keywords|e('html') }}
 {% else %}
@@ -7,3 +8,4 @@
         {{ registry().get('plugins.site.settings.keywords')|e('html') }}
     {% endif %}
 {% endif %}
+{% endapply %}
