--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -33,7 +33,7 @@
 <div class="lg:px-32">
     {# blog-posts #}
     {% for post in blogPosts %}
-        <a href="{{ url(post.id) }}" class="text-4xl border-b-black border-b-2 flex items-center py-4 hover:text-pink-500">
+        <a href="{{ url(post.id) }}" class="text-2xl lg:text-4xl border-b-black border-b-2 flex items-center py-4 hover:text-pink-500">
             <div>{{ post.title }}</div>
             <div class="ml-auto text-base">{{ post.published_at|date(flextype.registry.get('flextype.date_display_format')) }}</div>
         </a>
